# arbscanner

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  pages.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  QUALITY_GATES.md  QUICKSTART.md  TROUBLESHOOTING.md  data.json  index.html
examples/: basic_scan.py  custom_alerts.py
scripts/: install.sh  transform_becker.py
scripts/systemd/: arbscanner.service
src/arbscanner/: __init__.py  alerts.py  alerts_dedup.py  backtest.py  backup.py  calibration.py  cli.py  config.py  crypto.py  dashboard.py  db.py  doctor.py  engine.py  exchanges.py  execution.py  export.py  health.py  logging_config.py  matcher.py  metrics.py  migrations.py  models.py  odds.py  paper_trading.py  polling.py  utils.py  web.py
src/arbscanner/site/: __init__.py  build.py  index.html  validate.py
src/arbscanner/templates/: backtest.html  dashboard.html  landing.html  welcome.html
tests/: test_alerts.py  test_backtest.py  test_calibration.py  test_crypto.py  test_db.py  test_doctor.py  test_engine.py  test_execution.py  test_export.py  test_integration.py  test_matcher.py  test_odds.py  test_paper_trading.py  test_performance.py  test_polling.py  test_site_build.py  test_site_validate.py  test_utils.py  test_web.py
tests/fixtures/: __init__.py  mock_exchanges.py
