[project]
name = "arbscanner"
version = "0.1.0"
description = "Cross-platform prediction market arbitrage scanner"
# Pinned to 3.12.x in combination with `.python-version`. 3.13/3.14 are
# too new for several transitive deps to have wheels yet — widening this
# can wait until the ML ecosystem catches up.
requires-python = ">=3.12,<3.13"
dependencies = [
    "pmxt",
    "sentence-transformers",
    "anthropic",
    "rich",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "httpx",
    "stripe",
    "pyarrow",
    "pandas",
]

[project.scripts]
arbscanner = "arbscanner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arbscanner"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.uv]
# Only use Python interpreters uv itself installed. Stops a stray conda
# base env (3.14 on Ben's machine) from hijacking `uv sync` and defeating
# `.python-version`. Contributors who prefer their own interpreter can
# override per-invocation with `uv sync --python /path/to/python3.12`.
python-preference = "only-managed"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
